syntax = "proto2";

// Note: this file name must be unique due to how the iOS megazord works :(

package msg_types;

option java_package = "mozilla.appservices.logins";
option java_outer_classname = "MsgTypes";


message Login {
    required string id = 1;
    required string hostname = 2;
    optional string form_submit_url = 3;
    optional string http_realm = 4;
    required string username = 5;
    required string password = 6;
    required string username_field = 7;
    required string password_field = 8;
    required int64 time_created = 9;
    required int64 time_password_changed = 10;
    required int64 time_last_used = 11;
    required int64 times_used = 12;
}


message LoginsNodeList {
    repeated Login nodes = 1;
}

message LoginAddResponse {
    required string record_id = 1;
}